--- a/ios-developer.html
+++ b/ios-developer.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/faf77608-aa87-490f-96de-108a33467903'>Ancestry - Senior iOS Developer (mobile apps)- Ancestry (Lehi, UT)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/faf77608-aa87-490f-96de-108a33467903'>Ancestry - Senior iOS Developer (mobile apps)- Ancestry (Lehi, UT)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -236,15 +236,15 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/oeoS9fwn'>Grid Dynamics Careers - iOS/C++ Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/griddynamics/job/oeoS9fwn'>Grid Dynamics Careers - iOS/C++ Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/picsart/1633c0cc-51c5-4067-bfe8-416279b19549'>PicsArt - Senior iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/picsart/1633c0cc-51c5-4067-bfe8-416279b19549'>PicsArt - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/picsart/cc3b6311-8450-45ad-a814-623abff1cf67'>PicsArt - Senior iOS Developer, Video Team</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/picsart/cc3b6311-8450-45ad-a814-623abff1cf67'>PicsArt - Senior iOS Developer, Video Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -338,7 +338,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
@@ -369,7 +369,7 @@ Things?...</p>
 <p>4 days ago ... we provide the tools. Senior Software Engineer - Open Banking | Dublin, Ireland 
 ... Senior Engineer, Software Engineering | Dublin, Ireland ? Senior Engineer?...</p>
 <hr/>
-<h5><a href='http://smashingideas.applytojob.com/apply/qKmV8qHsDW/IOS-Developer'>iOS Developer - Smashing Ideas - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://smashingideas.applytojob.com/apply/qKmV8qHsDW/IOS-Developer'>iOS Developer - Smashing Ideas - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -454,7 +454,7 @@ Canada.</p>
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/simplisafe/jobs/1153454'>Job Application for Sr. iOS Mobile Developer at SimpliSafe</a></h5> 
+<h5><a href='https://boards.greenhouse.io/simplisafe/jobs/1153454'>Job Application for Sr. iOS Mobile Developer at SimpliSafe</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
