--- a/android-developer.html
+++ b/android-developer.html
@@ -57,7 +57,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/e050dc14-5dfa-4622-92da-4ff270187d6f'>Helbiz Inc. - Android Developer - New York City</a></h5> 
+<h5><a href='https://jobs.lever.co/helbiz/e050dc14-5dfa-4622-92da-4ff270187d6f'>Helbiz Inc. - Android Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -149,7 +149,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/splunk/job/o6oB9fwY'>Splunk Careers - Principal Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/o6oB9fwY'>Splunk Careers - Principal Android Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -197,7 +197,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1746926'>Job Application for Android Developer (m/f/d)  at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1746926'>Job Application for Android Developer (m/f/d)  at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -312,7 +312,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://workforcesource.recruiterbox.com/jobs/fk036u8'>
+<h5><a href='http://workforcesource.recruiterbox.com/jobs/fk036u8'>
     0708 - Stong Mid Android Developer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -425,7 +425,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bcg/217383ab-626f-4b6f-a4f8-4a7ca1a3b966'>BCG Digital Ventures - Contract - Android Developer, Digital Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/217383ab-626f-4b6f-a4f8-4a7ca1a3b966'>BCG Digital Ventures - Contract - Android Developer, Digital Health</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
